Nav hecho y desplegable comentado

--- a/AppGasolineras/src/app/shared/menu-nav/menu-nav/menu-nav.component.html
+++ b/AppGasolineras/src/app/shared/menu-nav/menu-nav/menu-nav.component.html
@@ -1,42 +1,34 @@
 <nav class="navbar fondoNegroEstandar sombreado fixed-top p-3">
     <div class="container-fluid d-flex justify-content-between">
 
-        <div style="width: 20%;">
-            <img src="https://acortar.link/lPGxEV" style="width:250px;" alt="Logo Pokédex">
+        <div class="d-flex">
+            <div style="background-color: white;" class="rounded-5">
+                <img src="https://cdn-icons-png.freepik.com/512/7720/7720738.png" style="width: 75px;" alt="Logo App">
+            </div>
+            <h1 class="text-center mb-0 pt-3 ms-2 text-light">GasApp</h1>
         </div>
+        
 
         <div style="width: 35%;">
-            <form class="d-flex">
-                <input type="text" class="form-control input w-100 rounded-5 border-0 py-2 px-3" placeholder="Introduce nombre o número">
-                <button type="submit" class="btn btn-primary fondoRojo rounded-5 ms-1 border-0"><i class="bi bi-search"></i></button>
-            </form>
+            <!--<form class="d-flex">
+                <form class="example-form">
+                    <mat-form-field class="example-full-width">
+                      <mat-label>Assignee</mat-label>
+                      <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
+                      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                        @for (option of filteredOptions | async; track option) {
+                          <mat-option [value]="option">{{option.name}}</mat-option>
+                        }
+                      </mat-autocomplete>
+                      <mat-option value="">Gasolina</mat-option>
+                      <mat-option value="">Hidrogeno</mat-option>
+                      <mat-option value="">Gasoleo A</mat-option>
+                    </mat-form-field>
+                  </form>
+            </form>-->
         </div>
 
-        <div class="d-flex justify-content-around" style="width: 45%;">
-            <div>
-                <h5 class="pt-3">
-                    <a class="mb-0 tipografia text-decoration-none text-light" routerLink="pokemon" routerLinkActive="active">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="30" class="rounded-circle border-0 me-2 mb-1 bg-white" viewBox="0 0 24 24" width="30">
-                            <path id="rellenoPokeball" d="m12 2a10 10 0 0 1 10 10 10 10 0 0 1 -10 10 10 10 0 0 1 -10-10 10 10 0 0 1 10-10m0 2c-4.08 0-7.45 3.05-7.94 7h4.07c.44-1.73 2.01-3 3.87-3s3.43 1.27 3.87 3h4.07c-.49-3.95-3.86-7-7.94-7m0 16c4.08 0 7.45-3.05 7.94-7h-4.07c-.44 1.73-2.01 3-3.87 3s-3.43-1.27-3.87-3h-4.07c.49 3.95 3.86 7 7.94 7m0-10a2 2 0 0 0 -2 2 2 2 0 0 0 2 2 2 2 0 0 0 2-2 2 2 0 0 0 -2-2z"/>
-                        </svg>Pokémon
-                    </a>
-                </h5>
-            </div>
-            <div>
-                <h5 class="pt-3">
-                    <a class="mb-0 tipografia text-decoration-none text-light" routerLink="item" routerLinkActive="active">
-                        <i class="bi bi-backpack2-fill"></i>&nbsp;&nbsp;Items
-                    </a>
-                </h5>
-            </div>
-            <div>
-                <h5 class="pt-3">
-                    <a class="mb-0 tipografia text-decoration-none text-light" routerLink="game" routerLinkActive="active">
-                        <i class="bi bi-dpad-fill"></i>&nbsp;&nbsp;Videojuegos
-                    </a>
-                </h5>
-            </div>
-        </div>
+       
 
     </div>
 </nav>
