Nav mejorado XD

--- a/AppGasolineras/src/app/shared/menu-nav/menu-nav/menu-nav.component.html
+++ b/AppGasolineras/src/app/shared/menu-nav/menu-nav/menu-nav.component.html
@@ -1,34 +1,37 @@
 <nav class="navbar fondoNegroEstandar sombreado fixed-top p-3">
-    <div class="container-fluid d-flex justify-content-between">
+  <div class="container-fluid d-flex justify-content-between">
 
-        <div class="d-flex">
-            <div style="background-color: white;" class="rounded-5">
-                <img src="https://cdn-icons-png.freepik.com/512/7720/7720738.png" style="width: 75px;" alt="Logo App">
-            </div>
-            <h1 class="text-center mb-0 pt-3 ms-2 text-light">GasApp</h1>
-        </div>
-        
-
-        <div style="width: 35%;">
-            <!--<form class="d-flex">
-                <form class="example-form">
-                    <mat-form-field class="example-full-width">
-                      <mat-label>Assignee</mat-label>
-                      <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
-                      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                        @for (option of filteredOptions | async; track option) {
-                          <mat-option [value]="option">{{option.name}}</mat-option>
-                        }
-                      </mat-autocomplete>
-                      <mat-option value="">Gasolina</mat-option>
-                      <mat-option value="">Hidrogeno</mat-option>
-                      <mat-option value="">Gasoleo A</mat-option>
-                    </mat-form-field>
-                  </form>
-            </form>-->
-        </div>
-
-       
-
+    <div class="d-flex">
+      <div style="background-color: white;" class="rounded-5">
+        <img src="https://cdn-icons-png.freepik.com/512/7720/7720738.png" style="width: 75px;" alt="Logo App">
+      </div>
+      <h1 class="text-center mb-0 pt-3 ms-2 text-light">GasApp</h1>
     </div>
+
+    <div class="d-flex justify-content-around" style="width: 45%;">
+        <div>
+          <!--form class="d-flex example-form">
+            <mat-form-field class="example-full-width">
+              <mat-label>Assignee</mat-label>
+              <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
+              <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                @for (option of filteredOptions | async; track option) {
+                <mat-option [value]="option">{{option.name}}</mat-option>
+                }
+              </mat-autocomplete>
+              <mat-option value="">Gasolina</mat-option>
+              <mat-option value="">Hidrogeno</mat-option>
+              <mat-option value="">Gasoleo A</mat-option>
+            </mat-form-field>
+          </form--> 
+        </div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
+    </div>
+
+  </div>
 </nav>
