--- a/AppGasolineras/src/app/shared/menu-nav/menu-nav/menu-nav.component.html
+++ b/AppGasolineras/src/app/shared/menu-nav/menu-nav/menu-nav.component.html
@@ -9,28 +9,23 @@
     </div>
 
     <div class="d-flex justify-content-around" style="width: 45%;">
-        <div>
-          <!--form class="d-flex example-form">
-            <mat-form-field class="example-full-width">
-              <mat-label>Assignee</mat-label>
-              <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
-              <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                @for (option of filteredOptions | async; track option) {
-                <mat-option [value]="option">{{option.name}}</mat-option>
-                }
-              </mat-autocomplete>
-              <mat-option value="">Gasolina</mat-option>
-              <mat-option value="">Hidrogeno</mat-option>
-              <mat-option value="">Gasoleo A</mat-option>
-            </mat-form-field>
-          </form--> 
-        </div>
-        <div>
+      <!--div>
+        <mat-form-field>
+          <mat-label>Favorite food</mat-label>
+          <mat-select>
+            @for (food of foods; track food) {
+            <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
 
-        </div>
-        <div>
+      </div-->
+      <div>
 
-        </div>
+      </div>
+      <div>
+
+      </div>
     </div>
 
   </div>
