--- a/AppGasolineras/src/app/components/gasolinera/gasolinera.component.html
+++ b/AppGasolineras/src/app/components/gasolinera/gasolinera.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5 pt-5">
     <div class="row mt-5">
-        <!--@for(gasolinera of listadoGasolineras; track gasolinera){-->
+        <!--@for(gasolinera of listadoGasolineras; track listadoGasolineras.indexOf(gasolinera)){-->
             <div class="col-md-3 col-12 p-2 my-3">
                 <div class="card border-3 rounded-4 h-100" style="width: 23rem; border-color: #FF8800;">
                     <div class="text-uppercase text-center rounded-top-4 bg-black py-2 px-3">
