--- a/AppGasolineras/src/app/components/gasolinera/gasolinera.component.html
+++ b/AppGasolineras/src/app/components/gasolinera/gasolinera.component.html
@@ -1,18 +1,18 @@
 <div class="container mt-5 pt-5">
     <div class="row mt-5">
-        <!--@for(gasolinera of listadoGasolineras; track listadoGasolineras.indexOf(gasolinera)){-->
+        @for(gasolinera of listadoGasolineras; track listadoGasolineras.indexOf(gasolinera)){
             <div class="col-md-3 col-12 p-2 my-3">
                 <div class="card border-3 rounded-4 h-100" style="width: 23rem; border-color: #FF8800;">
                     <div class="text-uppercase text-center rounded-top-4 bg-black py-2 px-3">
-                        <h1 class="m-0 py-1" style="color: #FF8800">Gasolinera Repsol Torneo</h1>
+                        <h1 class="m-0 py-1" style="color: #FF8800">{{gasolinera.nombre}}</h1>
                     </div>
                     <div class="card-body shadow">
-                        <h6 class="m-0 text-center" style="color: #FF8800">C. Torneo, 70, Casco Antiguo, 41002 Sevilla</h6>
+                        <h6 class="m-0 text-center" style="color: #FF8800"></h6>
                         <div class="d-flex flex-column mt-3">
                             <div class="container-100 d-flex justify-content-around align-items-center py-1">
                                 <h3 class="mb-0" style="width: 10%; color: #D90505;"><i class="bi bi-fuel-pump-fill"></i></h3>
                                 <h3 class="w-50 mb-0">GASÓLEO A</h3>
-                                <h3 class="text-light p-1 px-2 mb-0 rounded-4" style="width: fit-content; background-color: #D90505;">1,3 €/l</h3>
+                                <h3 class="text-light p-1 px-2 mb-0 rounded-4" style="width: fit-content; background-color: #D90505;">{{gasolinera.price95}} €/l</h3>
                             </div>
                             <div class="container-100 d-flex justify-content-around align-items-center py-1">
                                 <h3 class="mb-0" style="width: 10%; color: #8F9900;"><i class="bi bi-fuel-pump-fill"></i></h3>
@@ -28,6 +28,6 @@
                     </div>
                 </div>
             </div>
-        <!--}-->
+        }
     </div>
 </div>
