--- a/AppGasolineras/src/app/components/gasolinera/gasolinera.component.html
+++ b/AppGasolineras/src/app/components/gasolinera/gasolinera.component.html
@@ -12,17 +12,17 @@
                             <div class="container-100 d-flex justify-content-around align-items-center py-1">
                                 <h3 class="mb-0" style="width: 10%; color: #D90505;"><i class="bi bi-fuel-pump-fill"></i></h3>
                                 <h3 class="w-50 mb-0">GASÓLEO A</h3>
-                                <h3 class="text-light p-1 px-2 mb-0 rounded-4" style="width: fit-content; background-color: #D90505;">{{gasolinera.price95}} €/l</h3>
+                                <h3 class="text-light p-1 px-2 mb-0 rounded-4" style="width: fit-content; background-color: #D90505;">{{gasolinera.precioGasoleoA}} €/l</h3>
                             </div>
                             <div class="container-100 d-flex justify-content-around align-items-center py-1">
                                 <h3 class="mb-0" style="width: 10%; color: #8F9900;"><i class="bi bi-fuel-pump-fill"></i></h3>
                                 <h3 class="w-50 mb-0">GASOLINA</h3>
-                                <h3 class="text-light p-1 px-2 mb-0 rounded-4" style="width: fit-content; background-color: #8F9900;">1,4 €/l</h3>
+                                <h3 class="text-light p-1 px-2 mb-0 rounded-4" style="width: fit-content; background-color: #8F9900;">{{gasolinera.precioGasolina98E5}} €/l</h3>
                             </div>
                             <div class="container-100 d-flex justify-content-around align-items-center py-1">
                                 <h3 class="mb-0" style="width: 10%; color: #007DBB;"><i class="bi bi-fuel-pump-fill"></i></h3>
                                 <h3 class="w-50 mb-0">HIDRÓGENO</h3>
-                                <h3 class="text-light p-1 px-2 mb-0 rounded-4" style="width: fit-content; background-color: #007DBB;">3 €/kg</h3>
+                                <h3 class="text-light p-1 px-2 mb-0 rounded-4" style="width: fit-content; background-color: #007DBB;">{{gasolinera.precioHidrogreno}} €/kg</h3>
                             </div>
                         </div>
                     </div>
