--- a/AppGasolineras/src/app/components/gasolinera/gasolinera.component.html
+++ b/AppGasolineras/src/app/components/gasolinera/gasolinera.component.html
@@ -33,6 +33,9 @@
                                 </h3>
                                 <h3 class="text-light p-1 px-2 mb-0 rounded-4" style="width: fit-content; background-color: #ce9700;">{{ gasolinera.precioBioetanol }} €/l</h3>
                             </div>
+                            <div class="container-100 d-flex justify-content-between align-items-center py-1">
+                                <a class="btn btn-primary" [href]="gasolinera | googleMapRoute" target="_blank">Ubicacion</a>
+                            </div>
                         </div>
                     </div>
                 </div>
