--- a/AppGasolineras/src/app/components/gasolinera/gasolinera.component.html
+++ b/AppGasolineras/src/app/components/gasolinera/gasolinera.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid mt-5 pt-5" style="width: 90%;">
     <div class="row mt-5">
-        @for(gasolinera of listadoGasolineras; track listadoGasolineras.indexOf(gasolinera)){
+        @for(gasolinera of gasolineraFiltrada; track gasolineraFiltrada.indexOf(gasolinera)){
             <div class="col-md-3 col-12 p-2 my-3 d-flex justify-content-center">
                 <div class="card border-3 rounded-4 h-100" style="width: 25rem; border-color: #FF8800;">
                     <div class="text-uppercase text-center rounded-top-4 bg-black py-2 px-3">
