--- a/AppGasolineras/src/app/components/screen/screen.component.html
+++ b/AppGasolineras/src/app/components/screen/screen.component.html
@@ -1,6 +1,6 @@
 <app-menu-nav></app-menu-nav>
 
-<app-filter-bar (searchClicked)="onSerchClicked($event)"></app-filter-bar>
+<app-filter-bar (searchClicked)="onSearchClicked($event)"></app-filter-bar>
 
 
 <app-gasolinera [gasolineras]="gasolineras" [filters]="filters"></app-gasolinera>
