--- a/AppGasolineras/src/app/components/filter-bar/filter-bar.component.html
+++ b/AppGasolineras/src/app/components/filter-bar/filter-bar.component.html
@@ -1,1 +1,20 @@
-<p>filter-bar works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <form class="example-form">
+            <mat-form-field class="example-full-width">
+              <mat-label>Código Postal</mat-label>
+              <input type="text"
+                     placeholder="Introduzca código postal"
+                     aria-label="Number"
+                     matInput
+                     [formControl]="myControl"
+                     [matAutocomplete]="auto">
+              <mat-autocomplete #auto="matAutocomplete">
+                @for (option of filteredOptions | async; track option) {
+                  <mat-option [value]="option">{{option}}</mat-option>
+                }
+              </mat-autocomplete>
+            </mat-form-field>
+        </form>
+    </div>
+</div>
