--- a/AppGasolineras/src/app/components/filter-bar/filter-bar.component.html
+++ b/AppGasolineras/src/app/components/filter-bar/filter-bar.component.html
@@ -1,19 +1,13 @@
-
 <div class="container-fluid mt-5 pt-5">
     <div class="row mt-5">
         <form class="example-form col-md-6">
             <mat-form-field class="example-full-width">
-              <mat-label>Buscar por Código Postal</mat-label>
-              <input type="text"
-                     placeholder="Introduzca código postal"
-                     aria-label="Number"
-                     matInput
-                     [(ngModel)]="postalCode"
-                     [formControl]="myControl"
-                     [matAutocomplete]="auto">
-              <mat-autocomplete #auto="matAutocomplete">
-                <mat-option *ngFor="let option of filteredOptions | async" [value]="option">{{option}}</mat-option>
-              </mat-autocomplete>
+                <mat-label>Buscar por Código Postal</mat-label>
+                <input type="text" placeholder="Introduzca código postal" aria-label="Number" matInput
+                    [(ngModel)]="postalCode" [formControl]="myControl" [matAutocomplete]="auto">
+                <mat-autocomplete #auto="matAutocomplete">
+                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">{{option}}</mat-option>
+                </mat-autocomplete>
             </mat-form-field>
             <button type="button" class="btn btn-primary" (click)="filtrarPorCP()">Filtrar</button>
         </form>
@@ -21,7 +15,8 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 mb-3">
                     <label for="carburanteSeleccionado" class="form-label">Tipo de Carburante</label>
-                    <select class="form-select" id="carburanteSeleccionado" aria-label="Tipo de Carburante" [(ngModel)]="carburanteSeleccionado">
+                    <select class="form-select" id="carburanteSeleccionado" aria-label="Tipo de Carburante"
+                        [(ngModel)]="carburanteSeleccionado">
                         <option selected>- Seleccione Tipo de Carburante -</option>
                         <option value="Gasolina98">Gasolina 98</option>
                         <option value="GasoleoA">Gasoleo A</option>
@@ -32,12 +27,7 @@
                 <div class="col-md-12 mb-3">
                     <label for="precioRango" class="form-label">Rango de precio:</label>
                     <div class="d-flex align-items-center">
-                        <mat-slider 
-                            class="flex-grow-1 me-3" 
-                            min="0" 
-                            max="3" 
-                            step="0.1"  
-                            [discrete]="true" 
+                        <mat-slider class="flex-grow-1 me-3" min="0" max="3" step="0.1" [discrete]="true"
                             [showTickMarks]="0.1">
                             <input [(ngModel)]="min" matSliderStartThumb>
                             <input [(ngModel)]="max" matSliderEndThumb>
@@ -45,6 +35,16 @@
                     </div>
                     <button class="btn btn-primary mt-2 w-100" (click)="filtrarPorPrecio()">Buscar</button>
                 </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-12 mb-3">
+                <label for="comunidadSeleccionada" class="form-label">Comunidad Autónoma</label>
+                <select class="form-select" id="comunidadSeleccionada" aria-label="Comunidad Autónoma"
+                    [(ngModel)]="comunidadSeleccionada">
+                    <option selected>- Seleccione Comunidad Autónoma -</option>
+                    <option *ngFor="let comunidad of comunidad" [value]="comunidad.IDCCAA">{{comunidad.CCAA}}</option>
+                </select>
             </div>
         </div>
     </div>
