--- a/AppGasolineras/src/app/components/screen/screen.component.html
+++ b/AppGasolineras/src/app/components/screen/screen.component.html
@@ -2,6 +2,6 @@
 
 <app-filter-bar (postalCodeSeleccionado)="onSearchClicked1($event)" (searchClicked)="onSearchClicked2($event)"></app-filter-bar>
 
-<app-gasolinera [gasolineras]="gasolineras" [postalCode]="postalCode" [filters]="filters" [comunidad]="comunidad" [provincia]="provincia"></app-gasolinera>
-
-
+<app-gasolinera [gasolineras]="gasolineras" [postalCode]="postalCode" [filters]="filters" 
+    [comunidad]="comunidad" [provincia]="provincia">
+</app-gasolinera>
