--- a/AppGasolineras/src/app/components/filter-bar/filter-bar.component.html
+++ b/AppGasolineras/src/app/components/filter-bar/filter-bar.component.html
@@ -38,23 +38,27 @@
             </div>
         </div>
         <div class="row justify-content-center">
+
+            <!--COMUNIDADES AUTÓNOMAS-->
             <div class="col-md-12 mb-3">
                 <label for="comunidadSeleccionada" class="form-label">Comunidad Autónoma</label>
                 <select class="form-select" id="comunidadSeleccionada" aria-label="Comunidad Autónoma"
-                    [(ngModel)]="comunidadSeleccionada" (selectionchange)="filtrarPorComunidad()">
+                    [(ngModel)]="comunidad">    <!--(selectionchange)="filtrarPorComunidad()"-->
                     <option selected>- Seleccione Comunidad Autónoma -</option>
-                    <option *ngFor="let comunidad of comunidad" [value]="comunidad.IDCCAA">{{comunidad.CCAA}}</option>
+                    <option *ngFor="let comunidad of listadoComunidades" [value]="comunidad.IDCCAA">{{comunidad.CCAA}}</option>
                 </select>
             </div>
+
+            <!--PROVINCIAS-->
             <div class="col-md-12 mb-3">
                 <label for="provinciaSeleccionada" class="form-label">Provincia</label>
                 <select class="form-select" id="provinciaSeleccionada" aria-label="Provincia"
-                    [(ngModel)]="provinciaSeleccionada">
+                    [(ngModel)]="provincia">
                     <option selected>- Seleccione Provincia -</option>
-                    <option *ngFor="let provincia of provincia" [value]="provincia.IDPovincia">{{provincia.Provincia}}</option>
+                    <option *ngFor="let provincia of listadoProvincias" [value]="provincia.IDPovincia">{{provincia.Provincia}}</option>
                 </select>
             </div>
-            <button class="btn btn-primary" (click)="filtrarPorProvincia()">Filtrar</button>
+            <button class="btn btn-primary" (click)="filtrarPorCCAAoProvincia()">Filtrar</button>
         </div>
     </div>
 </div>
