--- a/AppGasolineras/src/app/components/screen/screen.component.html
+++ b/AppGasolineras/src/app/components/screen/screen.component.html
@@ -1,6 +1,6 @@
 <app-menu-nav></app-menu-nav>
 
-<app-filter-bar (postalCodeSeleccionado)="onSearchClicked1($event)" (searchClicked)="onSearchClicked2($event)"></app-filter-bar>
+<app-filter-bar (postalCodeSeleccionado)="onSearchClicked1($event)" (searchClicked)="onSearchClicked2($event)" (comunidadSeleccionada)="onSearchClicked3($event)"></app-filter-bar>
 
 <app-gasolinera [gasolineras]="gasolineras" [postalCode]="postalCode" [filters]="filters" 
     [comunidad]="comunidad" [provincia]="provincia">
